test hosting on gh pages

--- a/plugin-boilerplate/package.json
+++ b/plugin-boilerplate/package.json
@@ -1,11 +1,14 @@
 {
   "name": "plugin-boilerplate",
   "version": "1.0.0",
+  "homepage": "https://wenderzxavier.github.io/app-examples/plugin-boilerplate",
   "private": true,
   "scripts": {
     "prebuild": "rm -rf dist",
     "build": "NODE_ENV=production webpack",
-    "start": "NODE_ENV=development webpack serve"
+    "start": "NODE_ENV=development webpack serve",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "license": "MIT",
   "devDependencies": {
@@ -13,6 +16,7 @@
     "@types/react-dom": "17.0.3",
     "@webpack-cli/serve": "1.3.0",
     "css-loader": "5.2.0",
+    "gh-pages": "3.1.0",
     "html-webpack-plugin": "5.3.1",
     "localtunnel": "2.0.1",
     "style-loader": "2.0.0",
